@@ -10,9 +10,9 @@
 		<type fullname="System.IO.FileSystemWatcher" />
 		<type fullname="System.IO.InotifyWatcher" />
 		<type fullname="System.Net.Dns" />
-		<type fullname="System.Net.Socket" />
 		<type fullname="System.Net.SocketAddress" />
-		<type fullname="System.Net.SocketException" />
 		<type fullname="System.Net.Sockets.LingerOption" />
+		<type fullname="System.Net.Sockets.Socket" />
+		<type fullname="System.Net.Sockets.SocketException" />
 	</assembly>
 </linker>
